# clora-wan

./: .gitignore  README.md  evaluate_viclip_ablation.py  extract_failed_frames.py  extract_prelim_frames.py  preprocess_lora_videos.py  pyproject.toml
diffsynth/diffusion/: parsers.py
diffsynth/pipelines/: wan_video.py
diffsynth/utils/lora/: __init__.py  blora.py
examples/blora/: visualization.sh  visualize_cross_attention.py
examples/wanvideo/: visualization.sh  visualize_cross_attention.py
examples/wanvideo/model_inference/: Wan2.1-T2V-1.3B.py  Wan2.1-T2V-1.3B_ablation.py  run_viclip_eval.sh  run_wan_ablation.sh
examples/wanvideo/model_training/: Wan2.1-T2V-1.3B_clora.sh  train.py
examples/wanvideo/model_training/lora/: Wan2.1-T2V-1.3B_clora.sh  Wan2.1-T2V-1.3B_clora_batch.sh
examples/wanvideo/model_training/validate_lora/: Wan2.1-T2V-1.3B_clora.py  Wan2.1-T2V-1.3B_clora_batch.sh  Wan2.1-T2V-1.3B_clora_compose_batch.sh  run_clora_compositions.sh
sdxl_prompting/: sdxl_inference.py  sdxl_injection_pipeline.py
