[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffsynth"
version = "2.0.9"
description = "Enjoy the magic of Diffusion models!"
authors = [{name = "ModelScope Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10.1"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "transformers",
    "imageio",
    "imageio[ffmpeg]",
    "safetensors",
    "einops",
    "sentencepiece",
    "protobuf",
    "modelscope",
    "ftfy",
    "pandas",
    "accelerate",
    "peft",
    "datasets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["diffsynth", "diffsynth.*"]

[project.optional-dependencies]
npu_aarch64 = [
    "torch==2.7.1",
    "torch-npu==2.7.1",
    "torchvision==0.22.1"
]
npu = [
    "torch==2.7.1+cpu",
    "torch-npu==2.7.1",
    "torchvision==0.22.1+cpu"
]
audio = [
    "torchaudio",
    "torchcodec"
]
# For NVIDIA drivers that support CUDA <= 12.8 (e.g. driver 570.x).
# The `+cu128` local version pins the CUDA-12.8 wheel; the index URL
# must be passed on the command line because pyproject.toml has no
# field for it. Install with:
#   pip install -e ".[cu128]" --index-url https://download.pytorch.org/whl/cu128
cu128 = [
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "torchaudio==2.11.0+cu128"
]

[tool.setuptools]
include-package-data = true
